...
        ) {
            Text(stringResource(R.string.login_button))
        }
        Spacer(modifier = Modifier.height(16.dp))
        when (loginState) {
            is Loading -> CircularProgressIndicator(
                modifier = Modifier.testTag("progressIndicatorLogin")
            )
            is Idle -> {}
            else -> {
                companyDomain = ""
                username = ""
                password = ""
...
